[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://ChatPanel.gd" type="Script" id=2]
[ext_resource path="res://SkynetClient.gd" type="Script" id=3]
[ext_resource path="res://sproto.gd" type="Script" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 0.998
margin_bottom = 1.20001

[node name="Connect" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/Connect"]
margin_right = 956.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "ws://119.23.21.210:7101"

[node name="Button" type="Button" parent="Panel/VBoxContainer/Connect"]
margin_left = 960.0
margin_right = 1024.0
margin_bottom = 24.0
toggle_mode = true
text = "Connect"

[node name="SendText" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/SendText"]
margin_right = 977.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Enter some text to send ..."

[node name="Button" type="Button" parent="Panel/VBoxContainer/SendText"]
margin_left = 981.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Send"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="SkynetClient" type="Node" parent="Panel"]
script = ExtResource( 3 )

[node name="sproto" type="Node" parent="Panel/SkynetClient"]
script = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 323.616
margin_top = 222.933
margin_right = 630.616
margin_bottom = 297.933
text = "Load Sproto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 627.0
margin_top = 30.0
margin_right = 939.0
margin_bottom = 105.0
text = "Dump Sproto"

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 138.0
margin_top = 165.0
margin_right = 442.0
margin_bottom = 235.0
text = "Encode"

[node name="Button4" type="Button" parent="."]
visible = false
margin_left = 634.0
margin_top = 165.0
margin_right = 938.0
margin_bottom = 235.0
text = "Decode"
[connection signal="toggled" from="Panel/VBoxContainer/Connect/Button" to="Panel" method="_on_connect_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/SendText/Button" to="Panel" method="_on_send_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
